# mac-code

./: .gitignore  README.md  system_data.txt
we-together-skill/: .coverage  .gitignore  CLAUDE.md  GOVERNANCE.md  MANIFEST.in  README.md  SKILL.md  coverage.json  pyproject.toml
we-together-skill/benchmarks/: society_c_groundtruth.json
we-together-skill/codex_skill/: SKILL.md
we-together-skill/codex_skill_dev/: SKILL.md
we-together-skill/codex_skill_ingest/: SKILL.md
we-together-skill/codex_skill_runtime/: SKILL.md
we-together-skill/docs/: CHANGELOG.md  FAQ.md  HANDOFF.md  getting-started.md  good_first_issues.md  index.md  onboarding.md  publish.md  quickstart.md  release_notes_template.md  release_notes_v0.14.0.md  release_notes_v0.18.0.md  release_notes_v0.19.0.md
we-together-skill/scripts/: README.md  activation_path.py  agent_chat.py  analyze.py  auto_resolve_branches.py  bench_large.py  bench_scale.py  bootstrap.py  branch_console.py  build_retrieval_package.py  build_wheel.sh  chat.py  cold_memory.py  condense_memories.py  create_group.py  create_scene.py  daily_maintenance.py  dashboard.py  decay.py  dialogue_turn.py  dream_cycle.py  drift.py  e2e_smoke.sh  embed_backfill.py  eval_relation.py  extract_facets.py  federation_e2e_smoke.sh  federation_http_server.py  fix_graph.py  graph_io.py  graph_summary.py  import_auto.py  import_directory.py  import_email_file.py  import_file_auto.py  import_image.py  import_llm.py  import_narration.py  import_text_chat.py  import_wechat.py  (+30 more)
we-together-skill/tests/: test_cli_entry.py  test_cli_workflow.py  (+4 more)
(+159 files in other folders)
